[package]
name = "webmq"
version = "0.1.0"
edition = "2024"

[dependencies]
config = { "version" = "0.15.8", features = ["json5", "json"] }
env_logger = "0.11.6"
http-body-util = "0.1.0"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = {"version" = "0.1.10", "features" = ["full"]}
log = "0.4.26"
rustls = { version = "0.23.23", features = ["ring"] }
serde = { version = "1.0.218", features = ["derive"] }
tls-listener = { version = "0.11.0", features = ["rustls-core"] }
tokio = {"version" = "1.43.0", features = ["full"]}

